[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchleak"
version = "0.1.0"
description = "Detect benchmark contamination in large language models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "benchleak contributors" }]
keywords = ["llm", "benchmark", "contamination", "memorization", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.18",
    "numpy>=1.24",
    "scipy>=1.11",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/benchleak/benchleak"
Repository = "https://github.com/benchleak/benchleak"

[project.scripts]
benchleak = "benchleak.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["benchleak"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
